--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,8 @@ package-mode = false
 
 [tool.poetry.dependencies]
 python = "^3.12"
+pandas = "^2.2.2"
+rich = "^13.7.1"
 
 
 [tool.poetry.group.dev.dependencies]
